--- a/index.html
+++ b/index.html
@@ -15,19 +15,7 @@
     <h1>Hello, world!</h1>
     <h1>Hello, world!</h1>
     <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
+    <lore>jkeghukfghdbshkgsuivgcshkvbsjkvscuikvbsjkvjkhduidgfdhksvicfsydgcskjbchvshidgycisdhkcjvsdcvh</lore>
     <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
